# droneproject

./: CMakeLists.txt  README.md  package.xml
src/: BottomTrackFlight.cpp  BottomTrackFlight.h  CameraImageProcess.cpp  CameraImageProcess.h  Flight.cpp  Flight.h  FrontTrackFlight.cpp  FrontTrackFlight.h  ImageProcess.cpp  ImageProcess.h  KeyPointHistory.cpp  KeyPointHistory.h  Main.cpp  NavigationData.cpp  NavigationData.h  ObstacleAvoid.cpp  ObstacleAvoid.h  ObstacleDetect.cpp  ObstacleDetect.h  ObstacleTestFlight.cpp  ObstacleTestFlight.h  Pid.cpp  Pid.h  Selector.cpp  Selector.h  State.cpp  State.h  StateData.cpp  StateData.h  VideoImageProcess.cpp  VideoImageProcess.h  WanderFlight.cpp  WanderFlight.h
src/cvblobs/: BlobContour.cpp  BlobContour.h  BlobLibraryConfiguration.h  BlobOperators.cpp  BlobOperators.h  BlobProperties.cpp  BlobProperties.h  BlobResult.cpp  BlobResult.h  ComponentLabeling.cpp  ComponentLabeling.h  blob.cpp  blob.h
src/mftracker/: BB.cpp  BB.h  BBPredict.cpp  BBPredict.h  FBTrack.cpp  FBTrack.h  Lk.cpp  Lk.h  Median.cpp  Median.h
src/tld/: Clustering.cpp  Clustering.h  DetectionResult.cpp  DetectionResult.h  DetectorCascade.cpp  DetectorCascade.h  EnsembleClassifier.cpp  EnsembleClassifier.h  ForegroundDetector.cpp  ForegroundDetector.h  IntegralImage.h  MedianFlowTracker.cpp  MedianFlowTracker.h  NNClassifier.cpp  NNClassifier.h  NormalizedPatch.h  TLD.cpp  TLD.h  TLDUtil.cpp  TLDUtil.h  VarianceFilter.cpp  VarianceFilter.h
